--- a/recipeproject/style.css
+++ b/recipeproject/style.css
@@ -7,16 +7,19 @@
 #navlist{
     margin-left: 15px;
     margin-right: 15px;
-    list-style-type: none;
+    list-style: none;
     font-size: 2.8rem;
     display: flex;
+    justify-content: space-between;
+    /* used to provide a spacing between the logo and the about section */
     align-items: center;
+    /* used to align the div to the center */
 }
 
 .container{
     height: 100vh;
     width: 100vw;
-    overflow: none;
+    overflow-x: none;
 
 }
 
@@ -25,8 +28,24 @@
     width: 100vw;
     background-color: lightsalmon;
     min-height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.nav{
+    width: 100%;
+    overflow-x: none;
+    overflow-y: none;
 }
 
 #navlogo{
     font-size: 2.8rem;
+    font-colo
+}
+
+a{
+    text-decoration: none;
+    /* removes the underline from the links */
 }
