--- a/recipeproject/style.css
+++ b/recipeproject/style.css
@@ -20,6 +20,10 @@
     height: 100vh;
     width: 100vw;
     overflow-x: none;
+    background-color: #FBAB7E;
+    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+
+
 
 }
 
@@ -44,7 +48,7 @@
 }
 
 #navlogo{
-    font-size: 2.8rem;
+    font-size: 5rem;
     font-colo
 }
 
@@ -53,11 +57,44 @@ a{
         /* removes the underline from the links */
 }
 
-.navitems{
+#navitems{
     display: flex;
-    gap: 70px;
-    color: azure;
+    gap: 40px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 background-color: #0093E9;
 background-image: linear-gradient(225deg, #0093E9 0%, #80D0C7 100%);
+
+footer{
+    width: 100%;
+}
+
+.footerbox{
+    background-color: #85FFBD;
+    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+    
+    text-align: center;
+}
+
+.footerbox p{
+    color: solid black;
+    font-size: 50px;
+}
+
+.contentbox{
+    width: 70%;
+    margin: auto;
+    border: 1px solid black;
+    background-color: solid white;
+}
+
+.item{
+    display: flex;
+    justify-content: space-between;
+}
+
+.rightbox img{
+    height: 400px;
+    
+}
