--- a/recipeproject/style.css
+++ b/recipeproject/style.css
@@ -20,19 +20,18 @@
     height: 100vh;
     width: 100vw;
     overflow-x: none;
-    background-color: #FBAB7E;
-    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
-
-
-
+    background-color: #FF3CAC;
+    background-image: linear-gradient(329deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
 }
 
 
 .navcontainer{
     width: 100vw;
     /* background-color: lightsalmon; */
-    background-color: #0093E9;
-    background-image: linear-gradient(225deg, #0093E9 0%, #80D0C7 100%);
+    background-color: #8BC6EC;
+    background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+
+
 
     min-height: 80px;
     display: flex;
@@ -45,11 +44,12 @@
     width: 100%;
     overflow-x: none;
     overflow-y: none;
+    padding: 2rem;
 }
 
 #navlogo{
     font-size: 5rem;
-    font-colo
+    text-decoration: underline wavy;
 }
 
 a{
@@ -63,16 +63,16 @@ a{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-background-color: #0093E9;
-background-image: linear-gradient(225deg, #0093E9 0%, #80D0C7 100%);
+
 
 footer{
-    width: 100%;
+    width: 100vw;
 }
 
 .footerbox{
-    background-color: #85FFBD;
-    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+    background-color: #8BC6EC;
+    background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+
     
     text-align: center;
 }
@@ -83,18 +83,54 @@ footer{
 }
 
 .contentbox{
-    width: 70%;
+    width: 50%;
     margin: auto;
     border: 1px solid black;
     background-color: solid white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 250px;
+    padding: 4rem;
+    box-shadow: 1px 1px 50px black ;
+
 }
 
 .item{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .rightbox img{
+    display: flex;
     height: 400px;
-    
+    border: 1px solid black;
+    border-radius: 20px;
+    box-shadow: 1px 1px 20px black;
+    transition: all 0.6s linear 0s;
+}
+
+.rightbox img:hover{
+    transform: scale(1.05);
+}
+
+.leftbox{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.leftbox h2{
+    font-size: 3rem;
+    text-decoration-line:underline ;
+
+}
+
+.imgbox{
+    font-size: 1.5rem;
+}
+
+.recipebox{
+    font-size: 1.5rem;
 }
