--- a/recipeproject/style.css
+++ b/recipeproject/style.css
@@ -109,6 +109,8 @@ footer{
     border-radius: 20px;
     box-shadow: 1px 1px 20px black;
     transition: all 0.6s linear 0s;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .rightbox img:hover{
